[scss] fix sitewide banner placement when “extra margin-top” is enabled at Contentful

--- a/app/assets/stylesheets/contentful/_layout.scss
+++ b/app/assets/stylesheets/contentful/_layout.scss
@@ -9,8 +9,12 @@
 
 .app-container--top-margin {
   @include breakpoint(tablet) {
-    margin-top: ($mega-menu-desktop-height + 80px);
+    margin-top: ($mega-menu-desktop-height + $app-container--top-margin);
   }
+}
+
+.app-container--top-margin .alert-sale {
+  top: -$app-container--top-margin;
 }
 
 // use this class for breakpoints
